cli/tests/snapshot/inputs/errors/yaml_parse_failure.ncl
# capture = 'stderr'
# command = ['eval']
import "../../imports/invalid.yaml"
